<resources>
    <string name="app_name">AnimeXplorer</string>
    <string name="animexplore">AnimeXplorer</string>
    <string name="judul_anime">Judul Anime</string>
    <string name="synopsis">Synopsis</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="episode">Episode</string>
    <string-array name="data_genre">
        <item>Drama,Supernatural</item>
        <item>Comedy,Romance</item>
        <item>Action,Adventure</item>
        <item>Comedy</item>
        <item>Action,Adventure</item>
        <item>Komedi,Romantis</item>
        <item>Comedy,Fantasy</item>
        <item>Romance</item>
        <item>Aksi,Fantasi</item>
        <item>Action,Adventure</item>
        <item>Comedy</item>
        <item>Petualangan,Fantasi</item>
        <item>Petualangan,Fantasi</item>
        <item>Adventure,Comedy</item>
        <item>Action, Fantasi</item>
    </string-array>
    <string name="studio">Studio</string>
    <string name="duration">Duration</string>
    <string-array name="data_episode">
        <item>13 Episode</item>
        <item>12 Episode</item>
        <item>unknown Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
        <item>10 Episode</item>
        <item>unknown Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
        <item>12 Episode</item>
    </string-array>
    <string-array name="data_duration">
        <item>25 min.per ep.</item>
        <item>24 min.per ep.</item>
        <item>23 min.</item>
        <item>23 min.per ep.</item>
        <item>23 min.per ep.</item>
        <item>24 menit per ep.</item>
        <item>23 min.per ep.</item>
        <item>23 min.per ep.</item>
        <item>24 menit per ep.</item>
        <item>24 menit per ep.</item>
        <item>23 min. per ep.</item>
        <item>23 min. per ep.</item>
        <item>24 menit per ep.</item>
        <item>24 menit per ep.</item>
        <item>24 menit per ep.</item>
    </string-array>
    <string-array name="data_studio">
        <item>Doga Kobo</item>
        <item>Doga Kobo</item>
        <item>The Answer Studio</item>
        <item>Wit Studio</item>
        <item>Actas,Bandai Namco Pictures</item>
        <item>A-1 Pictures</item>
        <item>AtelierPontdarc</item>
        <item>Studio Deen</item>
        <item>Wit Studio</item>
        <item>J.C.Staff</item>
        <item>Nomad</item>
        <item>Seven Arcs</item>
        <item>OLM</item>
        <item>CloverWorks</item>
        <item>Perusahaan Yumeta</item>
    </string-array>
    <string name="label_synopsis">Synopsis</string>
    <string name="profile">About</string>
    <string name="auliyanasti06_gmail_com">auliyanasti06@gmail.com</string>
    <string name="auliya_ikhsana_nasution">Auliya Ikhsana Nasution</string>
    <string name="share">share</string>
    <string-array name="data_name">
        <item>Oshi no Ko 2nd Season</item>
        <item>Tokidoki Bosotto Russia-go de Dereru Tonari no Alya-san</item>
        <item>Kami no Tou: Ouji no Kikan</item>
        <item>Shikanoko Nokonoko Koshitantan</item>
        <item>Tsue to Tsurugi no Wistoria</item>
        <item>Make Heroine ga Oosugiru!</item>
        <item>Isekai Shikkaku</item>
        <item>Gimai Seikatsu</item>
        <item>Isekai Suicide Squad</item>
        <item>Fairy Tail: 100-nen Quest</item>
        <item>Giji Harem</item>
        <item>Hazurewaku no Joutai Ijou Skill de Saikyou ni Natta Ore ga Subete wo Juurin suru made</item>
        <item>Ore wa Subete wo "Parry" suru: Gyaku Kanchigai no Sekai Saikyou wa Boukensha ni Naritai</item>
        <item>Nige Jouzu no Wakagimi</item>
        <item>Shinmai Ossan Boukensha, Saikyou Party ni Shinu hodo Kitaerarete Muteki ni Naru</item>
    </string-array>
</resources>