<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@color/navy">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        >


        <ImageView
            android:id="@+id/anime_photo"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/anime_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/anime_photo"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@id/anime_photo"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <!-- Data Episode -->
        <TextView
            android:id="@+id/data_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/data_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@id/genre"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/episode"
            app:layout_constraintStart_toEndOf="@id/anime_photo"
            app:layout_constraintTop_toBottomOf="@id/genre" />


        <TextView
            android:id="@+id/data_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/data_episode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/episode"
            app:layout_constraintTop_toBottomOf="@id/data_genre" />

        <TextView
            android:id="@+id/studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/studio"
            app:layout_constraintStart_toEndOf="@id/anime_photo"
            app:layout_constraintTop_toBottomOf="@id/episode" />


        <TextView
            android:id="@+id/data_studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/data_studio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@id/studio"
            app:layout_constraintTop_toBottomOf="@id/data_episode" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/duration"
            app:layout_constraintStart_toEndOf="@id/anime_photo"
            app:layout_constraintTop_toBottomOf="@id/studio" />


        <TextView
            android:id="@+id/data_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/data_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toEndOf="@id/duration"
            app:layout_constraintTop_toBottomOf="@id/data_studio" />

        <TextView
            android:id="@+id/synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/label_synopsis"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/anime_photo" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/synopsis"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/synopsis_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>